hphp/hack/test/typecheck/funcall_explicit_arg_infer_error.php.exp
File "funcall_explicit_arg_infer_error.php", line 7, characters 16-17:
Invalid argument (Typing[4110])
File "funcall_explicit_arg_infer_error.php", line 6, characters 35-40:
Expected string
File "funcall_explicit_arg_infer_error.php", line 6, characters 26-28:
But got int
